# PCS-project

./: README.md
C++/: .gitignore  CMakeLists.txt  main.cpp
C++/src/: Intersector1D1D.cpp  Intersector1D1D.hpp  IntersectorPolygonLine.cpp  IntersectorPolygonLine.hpp  MACROS.h  Mesh.cpp  Mesh.hpp  Point.cpp  Point.hpp  Polygon.cpp  Polygon.hpp  PolygonCutter.cpp  PolygonCutter.hpp  ReferenceElement.cpp  ReferenceElement.hpp  Segment.cpp  Segment.hpp
C++/test/: test_intersector1D1D.hpp  test_intersectorpolygonline.hpp  test_mesh.hpp  test_polygon.hpp  test_polygoncutter.hpp  test_referenceelement.hpp  test_segment.hpp
Python/: .gitignore
Python/src/: CONSTANT.py  Intersector1D1D.py  IntersectorPolygonLine.py  PointClass.py  PolygonClass.py  PolygonCutter.py  SegmentClass.py
Python/test/: test_intersector1D1D.py  test_intersector_polygon_line.py  test_polygon.py  test_polygon_cutter.py  test_segment.py
UML/: UML_TEXT.txt  plantuml_export.txt
